# LOAN_POC

./: README.md
loan_poc/: README.md  pubspec.yaml
loan_poc/android/app/: build.gradle.kts
loan_poc/android/app/src/main/: AndroidManifest.xml
loan_poc/android/app/src/main/kotlin/com/nmt/cv/loan_poc/: MainActivity.kt
loan_poc/ios/Runner/: Info.plist
loan_poc/ios/Runner.xcodeproj/: project.pbxproj
loan_poc/lib/: main.dart
loan_poc/lib/models/: metadata_models.dart
loan_poc/lib/screens/: dynamic_form_screen.dart
loan_poc/lib/services/: api_service.dart
loan_poc/linux/: CMakeLists.txt
loan_poc/linux/runner/: my_application.cc
loan_poc/macos/Runner.xcodeproj/: project.pbxproj
loan_poc/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
loan_poc/macos/Runner/Configs/: AppInfo.xcconfig
loan_poc/test/: widget_test.dart
loan_poc/web/: index.html  manifest.json
loan_poc/windows/: CMakeLists.txt
loan_poc/windows/runner/: Runner.rc  main.cpp
poc2_backend/: README.md  base_form.py  field_registry.py  main.py  pyproject.toml  tests.py
poc2_backend/models/: context.py
poc2_backend/services/: metadata_service.py
